--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   
   header {
     background-color: #333;
-    color: #fff;
+    color: red;
     padding: 1rem;
     text-align: center;
   }
